# OpsiGen

./: .gitignore  README.md  RhoMax.ipynb  check_rmsd_between_two_pdbs.py  consts.py  data_parser.py  dependencies.sh  excel_parser.py  fastas_to_pdb  feature_extractor.py  find_lyz.txt  loss_train.npy  main.py  model.pckl  models.py  pdb_dataset.py  pdb_parser.py  phoeinx_tester.sh  plot_arr.py  requirements.txt  run.sh  run_on_phoenix.sh  run_specific_on_phoenix.sh  run_specific_on_phoenix_long_time.sh  run_specific_on_phoenix_short_time.sh  run_test.sh  run_test_for_all.sh  run_test_on_phoenix.sh  test.py  train.py  train_loss.npy  training.py  validate_all_npzs_in_directory.py
configurations/: consts.py
data_fetchers/: pdb_dataset.py
excel/: data.xlsx  ~$data.xlsx
feature_maker/: .gitignore  CMakeLists.txt  Makefile  chem.lib  cmake_install.cmake  interface.cc  interface2grid
feature_maker/add_amino_acid_features/: alignment.py  alpha_fold_feature_parser.py  amino_acid_feature.csv  amino_acid_feature_retina.csv  amino_mapping  main.py  new_sequence.fas  parse_amino_csv_to_np.py  protein.py  run.sh
new_encodings/: excel_parser.py  features_dataset.py  models.py  train.py
parsers/: cryo_parser.py  data_parser.py  feature_extractor.py  preprocess_graph.py
pipeline_auto/: add_amino_acid_features.sh  config.json  config.py  cutter.py  feature_maker.sh  main.py  run.sh  sequences.py
predict/: calculate_one_rhodopsin.py  calculate_one_rhodopsin.sh  conf_all  excel_parser.py  means.npy  model_pickel  new_pdb_dataset.py  pdb_dataset.py  pdb_parser.py  result.txt  (+6 more)
(+98 files in other folders)
